# mocify

./: .gitignore  README.md  index.html  index.html.backup  package-lock.json  package.json  vite.config.js
src/: App.jsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: api.rs  db.rs  main.rs  mock_server.rs  models.rs
src/components/modals/: EditCollectionModal.jsx  EditRouteModal.jsx  NewCollectionModal.jsx  NewRouteModal.jsx  TestHistoryModal.jsx
src/hooks/: useCollections.js  useRoutes.js  useServers.js  useTestHistory.js
src/utils/: tauri.js
