[package]
name = "mocify"
version = "0.1.0"
edition = "2021"

[dependencies]
# GUI Framework
tauri = { version = "1.5", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "sqlite"] }
tokio = { version = "1", features = ["full"] }

# HTTP Server
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
reqwest = "0.11"

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
dirs = "5.0"
log = "0.4"
env_logger = "0.10"

[dependencies.tauri-build]
version = "1.5"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[[bin]]
name = "mocify"
path = "src/main.rs"
